--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 .ipynb_checkpoints/Lab 1-checkpoint.ipynb
 .ipynb_checkpoints/R tutorials-checkpoint.ipynb
+cworkTrain.arff
+cworkPredict.arff
+Term Deposit Prediction.ipynb
+.ipynb_checkpoints/Data Mining Notes-checkpoint.ipynb
+.ipynb_checkpoints/Term Deposit Prediction-checkpoint.ipynb
