NYflights data explortaion

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ cworkPredict.arff
 Term Deposit Prediction.ipynb
 .ipynb_checkpoints/Data Mining Notes-checkpoint.ipynb
 .ipynb_checkpoints/Term Deposit Prediction-checkpoint.ipynb
+.ipynb_checkpoints/Tutorial Filtering Data-checkpoint.ipynb
