--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Term Deposit Prediction.ipynb
 .ipynb_checkpoints/Data Mining Notes-checkpoint.ipynb
 .ipynb_checkpoints/Term Deposit Prediction-checkpoint.ipynb
 .ipynb_checkpoints/Tutorial Filtering Data-checkpoint.ipynb
+.ipynb_checkpoints/(draft) Group on values of a random variable-checkpoint.ipynb
+(draft) Group on values of a random variable.ipynb
