--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Term Deposit Prediction.ipynb
 .ipynb_checkpoints/Tutorial Filtering Data-checkpoint.ipynb
 .ipynb_checkpoints/(draft) Group on values of a random variable-checkpoint.ipynb
 (draft) Group on values of a random variable.ipynb
+.DS_Store
